# DB-Bot

./: .breakpoints  .gitignore  .replit  README.md  activity_log.py  convert_database.py  convert_index.py  data  data.db  database.py  dbbot.py  discordutils.py  financeutils.py  main.py  pnwutils.py  pyproject.toml  requirements.txt
.github/workflows/: development_dbbot-host.yml  development_dbbottest-host.yml  master_dbbot-host.yml  master_pnwdbbot.yml
bot/: dbbot.py  main.py
bot/cogs/: applications.py  applications_old.py  debug.py  logger.py  market.py  new_war_detector.py  open_slots_detector.py  options.py  resend.py  resource_check.py  util.py  war.py  webserver.py
bot/convert/: convert_database.py  instructions.txt  modify_loans.py
bot/utils/: __init__.py  config.py  dbbot.py  queries.py
cogs/: applications.py  applications_old.py  bank.py  debug.py  detector.py  finance.py  logger.py  market.py  new_war_detector.py  open_slots_detector.py  options.py  util.py  war.py  war_detector.py  webserver.py
convert/: convert_database.py  convert_dict.py  convert_index.py  dict.txt  instructions.txt  modify_loans.py
loopedfunctions/: contacted.csv  converter.py  main.py  settings.json
loopedfunctions/functions/: __init__.py  activity_logger.py  constants.py  recruiter.py  types.py
util/: discordutils.py  financeutils.py
utils/: __init__.py  config.py  databases.py  dbbot.py  discordutils.py  financeutils.py  help_command.py  pnwutils.py  queries.py
utils/databases/: classes.py  misc.py  postgresql.py
utils/discordutils/: __init__.py  cogs.py  misc.py  (+3 more)
(+32 files in other folders)
