[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_DB-Bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^3.10.0"
yarl = "^1.6.3"
Flask = "^2.0.1"
orjson = "^3.6.3"
aiohttp = "^3.8.1"
[tool.poetry.dev-dependencies]